--- a/src/testPage.html
+++ b/src/testPage.html
@@ -16,7 +16,8 @@
 <button id="btn">ReAnimate</button>
 
 <div id="container" style="height: 300px; width: 50%;"></div>
-
+<hr/>
+<div id="container2" style="height: 200px; width: 50%;"></div>
 
 <script type="text/javascript">
 
@@ -40,6 +41,10 @@
         var myChart = new WinnersPodiumChart($('#container'));
         myChart.data(data);
         myChart.draw();
+
+        var myChart2 = new WinnersPodiumChart($('#container2'));
+        myChart2.data(data);
+        myChart2.draw();
         $("#btn").click(myChart.animate);
     });
 </script>
